--- a/jupyter-gpu-test/gpu-notebook.ipynb
+++ b/jupyter-gpu-test/gpu-notebook.ipynb
@@ -9,13 +9,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import jax.numpy as jnp\n",
     "from jax import grad, jit, vmap\n",
     "from jax import random"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "os.environ['XLA_PYTHON_CLIENT_PREALLOCATE']='false'\n",
+    "os.environ['XLA_PYTHON_CLIENT_MEM_FRACTION']='.30'"
    ]
   },
   {
